--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,8 @@
 [deps]
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MoleculeFlow = "0907176b-47b3-4e96-be91-0e9bb91fb14f"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
